# musik-svn

trunk/: .tm_project.cache  (+5 more)
trunk/wxMusik/: CMakeLists.txt  Musik.iss  Musik.sln  Musik.vcproj  Musik_win9x.iss  changelog.txt  license.txt  makedmg.sh  mkwxmusiktar.sh  wxMusik.iss  wxMusik.sln  wxMusik.spec  wxMusik.vcproj  wxMusik_VS2005.sln  wxMusik_VS2005.vcproj  wxMusik_win9x.iss  wxMusik_x64.iss
trunk/wxMusik/MMShellHook/: MMShellHook _VS2005.vcproj  MMShellHook.cpp  MMShellHook.vcproj  MMShellHook_VS2005.vcproj
trunk/wxMusik/MUSIKEngine/: CMakeLists.txt  Engine.vsprops  engine.cmake
trunk/wxMusik/MUSIKEngine/AudioQueueEngine/: CMakeLists.txt
trunk/wxMusik/MUSIKEngine/AudioQueueEngine/inc/: audioqueueengine.h
trunk/wxMusik/MUSIKEngine/AudioQueueEngine/src/: CAException.h  CMakeLists.txt  audioqueueengine.cpp  audioqueuestreamout.cpp  audioqueuestreamout.h
trunk/wxMusik/MUSIKEngine/FMODEngine/: CMakeLists.txt  FMODEngine.vcproj
trunk/wxMusik/MUSIKEngine/FMODEngine/inc/: fmodengine.h
trunk/wxMusik/MUSIKEngine/FMODEngine/src/: CMakeLists.txt  fmodengine.cpp  fmodequalizer.cpp  fmodequalizer.h  fmodstreamout.cpp  fmodstreamout.h
trunk/wxMusik/MUSIKEngine/FMODExEngine/: CMakeLists.txt  FMODExEngine.vcproj  FMODExEngine_VS2005.vcproj
trunk/wxMusik/MUSIKEngine/FMODExEngine/inc/: fmodexengine.h
trunk/wxMusik/MUSIKEngine/FMODExEngine/src/: CMakeLists.txt  fmodexengine.cpp  fmodexequalizer.cpp  fmodexequalizer.h  fmodexstreamout.cpp  fmodexstreamout.h
trunk/wxMusik/MUSIKEngine/MPC/: MPCLib.vcproj  bitstream.cpp  requant.h
trunk/wxMusik/MUSIKEngine/MUSIKEngine/: MUSIKEngine.vcproj  MUSIKEngine_VS2005.vcproj
trunk/wxMusik/MUSIKEngine/MUSIKEngine/inc/: decoder.h  defaultdecoder.h  engine.h  equalizer.h  imusikstreamout.h  stdafx.h  stream.h
trunk/wxMusik/MUSIKEngine/MUSIKEngine/src/: CMakeLists.txt  aacdecoder.cpp  aacdecoder.h  apedecoder.cpp  apedecoder.h  decoder.cpp  engine.cpp  flacdecoder.cpp  flacdecoder.h  mpcdecoder.cpp  mpcdecoder.h  prec.cpp  stream.cpp
trunk/wxMusik/MUSIKEngine/XineEngine/: CMakeLists.txt  XineEngine.vcproj
trunk/wxMusik/VSPropSheets/: 3rdParty.vsprops  Base.vsprops  Debug.vsprops  Release.vsprops  Unicode.vsprops  wxMusik.vsprops  wxWidgets.vsprops  x64.vsprops
trunk/wxMusik/VSPropSheets_VS2005/: Base.vsprops  Release.vsprops  wxWidgets.vsprops
trunk/wxMusik/contrib/playlists/: 100_most_skipped_songs.mpd  50_lastplayed_songs.mpd  added_in_the_last_2_days.mpd  adrenaline_radio.mpu  air_america_radio.mpu  albums_with_rated_songs.mpd  bassdrive.mpu  gotham_radio.mpu  groove_salad_[chill-out].mpu  indie_pop_rocks.mpu  m_o_s_t_l_y_-_c_l_a_s_s_i_c_a_l.mpu  most_hated_songs.mpd  newly_added_and_mistagged.mpd  progrock_radio.mpu  radio_c64.mpu  radio_paradise.mpu  stellar_attraction.mpu
trunk/wxMusik/data/: CMakeLists.txt  about.htm  about.html
trunk/wxMusik/data/ratingart/: CMakeLists.txt
trunk/wxMusik/genlocal/: Makefile  copywxstdmo.bat  cs.po  de.po  es.po  fr.po  gr.po  it.po  nb.po  nl.po  pl.po  pt_BR.po  ru.po  wxMusik.po
trunk/wxMusik/locale/: CMakeLists.txt
trunk/wxMusik/locale/cs/: wxMusik.mo  wxstd.mo
trunk/wxMusik/locale/de/: wxMusik.mo  wxstd.mo
trunk/wxMusik/locale/es/: wxMusik.mo  wxstd.mo
trunk/wxMusik/locale/fr/: wxMusik.mo  wxstd.mo
trunk/wxMusik/locale/gr/: wxMusik.mo
trunk/wxMusik/locale/it/: wxMusik.mo  wxstd.mo
trunk/wxMusik/locale/nb/: wxMusik.mo  wxstd.mo
trunk/wxMusik/locale/nl/: wxMusik.mo  wxstd.mo
trunk/wxMusik/locale/pl/: wxMusik.mo  wxstd.mo
trunk/wxMusik/locale/pt_BR/: wxMusik.mo  wxstd.mo
trunk/wxMusik/locale/ru/: wxMusik.mo  wxstd.mo
trunk/wxMusik/scripts/cmake/: MyFindwxWindows.cmake  PCHSupport.cmake
trunk/wxMusik/src/: CMakeLists.txt  DNDHelper.h  Musik.rc  MusikAboutDlg.cpp  MusikApp.cpp  MusikApp.h  MusikDefines.h  MusikGlobals.cpp  MusikGlobals.h  MusikId.cpp  MusikId.h  MusikUtils.cpp  MusikUtils.h  MusikVersion.h  PLFile.h  Playlist.cpp  Playlist.h  PlaylistColumn.cpp  PlaylistColumn.h  ThreadController.h  myprec.h  wxmod_listctrl.cpp  wxmod_listctrl.h  wxprec.cpp
trunk/wxMusik/src/Classes/: ActivityAreaCtrl.cpp  ActivityAreaCtrl.h  ActivityBox.cpp  ActivityBox.h  BtnDown.h  GaugeSeek.cpp  GaugeSeek.h  MusikDb.cpp  MusikDb.h  MusikDb_Sqlite.cpp  MusikDb_Sqlite.h  MusikDb_Sqlite3.cpp  MusikDb_Sqlite3.h  MusikEQCtrl.cpp  MusikEQCtrl.h  MusikEQGauge.h  MusikFX.cpp  MusikFX.h  MusikLibrary.cpp  MusikLibrary.h  MusikListCtrl.cpp  MusikListCtrl.h  MusikPlayer.cpp  MusikPlayer.h  MusikPrefs.cpp  MusikPrefs.h  NowPlayingCtrl.cpp  NowPlayingCtrl.h  PictureBox.cpp  PictureBox.h  PlaylistCtrl.cpp  PlaylistCtrl.h  PlaylistInfoCtrl.cpp  PlaylistInfoCtrl.h  SourcesBox.cpp  SourcesBox.h  Tunage.cpp  Tunage.h  WebServer.cpp  WebServer.h
trunk/wxMusik/src/Frames/: MusikAutoTaggerFrame.cpp  MusikAutoTaggerFrame.h  MusikFXFrame.cpp  MusikFXFrame.h  MusikFrame.cpp  MusikFrame.h  MusikFrameEvents.cpp  MusikLibraryFrame.cpp  MusikLibraryFrame.h  MusikPrefsFrame.cpp  MusikTagFrame.cpp  MusikTagFrame.h  MusikVolumeFrame.cpp  MusikVolumeFrame.h
trunk/wxMusik/src/Threads/: ActivityBoxThreads.cpp  ActivityBoxThreads.h  MusikLibraryThreads.cpp  MusikLibraryThreads.h  MusikTagThreads.cpp  MusikTagThreads.h  MusikThreads.cpp  MusikThreads.h  PlaylistCtrlThreads.cpp  PlaylistCtrlThreads.h
trunk/wxMusik/src/images/: tray.xpm
trunk/wxMusik/src/shibatch/: Equ.cpp
wxMusik/src/: CMakeLists.txt  MusikApp.h  MusikUtils.cpp  MusikUtils.h  PrefUtil.h
wxMusik/src/Classes/: ActivityBox.cpp  ActivityBox.h  BtnDown.cpp  GaugeSeek.cpp  MusikEQGauge.cpp  MusikEQGauge.h  MusikFX.cpp  MusikLibrary.cpp  MusikListCtrl.cpp  MusikPrefs.h  NowPlayingCtrl.cpp  PictureBox.cpp  Tunage.cpp  WebServer.cpp
wxMusik/src/Frames/: MusikFXFrame.h  MusikFrame.cpp  MusikFrame.h  MusikPrefsFrame.h  MusikVolumeFrame.cpp  MusikVolumeFrame.h
wxMusik/src/Threads/: ActivityBoxThreads.cpp  ActivityBoxThreads.h  MusikTagThreads.cpp
wxMusik/src/images/playback/: volume.xpm
wxMusik/src/images/ratings/: rating0.xpm  rating5.xpm
wxMusik/src/images/sources/: nowplaying.xpm
wxMusik/src/shibatch/: Fftsg_fl.cpp
(+484 files in other folders)
