
PROJECT(wxMusik)
SUBDIRS(data locale 3rd-Party MUSIKEngine src)
INCLUDE (${wxMusik_SOURCE_DIR}/scripts/cmake/TargetDistclean.cmake)

IF(NOT WIN32 )
IF(NOT APPLE)
SET(CMAKE_CXX_FLAGS " `pkg-config  --cflags-only-I gtk+-2.0`  ${CMAKE_CXX_FLAGS}")
ENDIF(NOT APPLE)
ENDIF(NOT WIN32)
# Configure for a wxWindows build
INCLUDE( ${CMAKE_CURRENT_SOURCE_DIR}/scripts/cmake/MyUse_wxWindows.cmake)

OPTION(OPTION_SUPPORT_APE "Support Ape (Monkeys Audio Files) " ON)
OPTION(OPTION_SUPPORT_MPC "Support Musepack (MPC) Audio Files " ON)
OPTION(OPTION_SUPPORT_FLAC "Support FLAC Audio Files " ON)


IF(OPTION_SUPPORT_MPC)
# musepack library
FIND_LIBRARY(MUSEPACK_LIBRARY NAMES musepack PATHS /usr/lib /usr/local/lib)
ELSE(OPTION_SUPPORT_MPC)
SET(MUSEPACK_LIBRARY "")
ADD_DEFINITIONS(-DMUSIKENGINE_NO_MPC_SUPPORT)
ENDIF(OPTION_SUPPORT_MPC)

IF(OPTION_SUPPORT_APE)
# monkeys audio library
FIND_LIBRARY(MAC_LIBRARY NAMES mac PATHS /usr/lib /usr/local/lib)
ELSE(OPTION_SUPPORT_APE)
SET(MAC_LIBRARY "")
ADD_DEFINITIONS(-DMUSIKENGINE_NO_APE_SUPPORT)
ENDIF(OPTION_SUPPORT_APE)

IF(OPTION_SUPPORT_FLAC)
# FLAC library
FIND_LIBRARY(FLAC_LIBRARY NAMES FLAC PATHS /usr/lib /usr/local/lib)
ELSE(OPTION_SUPPORT_FLAC)
SET(FLAC_LIBRARY "")
ADD_DEFINITIONS(-DMUSIKENGINE_NO_FLAC_SUPPORT)
ENDIF(OPTION_SUPPORT_FLAC)

# SQLite library
FIND_LIBRARY(SQLITE_LIBRARY NAMES sqlite PATHS /usr/lib /usr/local/lib)


# fmod library
FIND_LIBRARY(FMOD_LIBRARY NAMES fmod-3.74 fmod PATHS /usr/lib /usr/local/lib)

# Vorbis library
#FIND_LIBRARY(VORBIS_LIBRARY NAMES vorbis PATHS /usr/lib /usr/local/lib)


INCLUDE_DIRECTORIES("${wxMusik_SOURCE_DIR}")
INCLUDE_DIRECTORIES("${wxMusik_SOURCE_DIR}/src")
INCLUDE_DIRECTORIES("${wxMusik_SOURCE_DIR}/3rd-Party/taglib")
INCLUDE_DIRECTORIES("${wxMusik_SOURCE_DIR}/3rd-Party/taglib/toolkit")
INCLUDE_DIRECTORIES("${wxMusik_SOURCE_DIR}/MUSIKEngine")


# Set build variables
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -ansi ")
#IF(APPLE)
#SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -fast -mcpu=G4 -O3 -pipe -faltivec")
#ENDIF(APPLE)
IF(UNIX)
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -pipe -fomit-frame-pointer")
ENDIF(UNIX)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})
SET(MyExecutable_PATH ${EXECUTABLE_OUTPUT_PATH})

