
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../inc)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../..)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../3rd-Party)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../3rd-Party/include)

INCLUDE(CheckIncludeFileCXX)

CHECK_INCLUDE_FILE_CXX("musepack/stdafx.h" USE_MPCDEC_103)
IF(${USE_MPCDEC_103})
ADD_DEFINITIONS(-DMUSIKENGINE_USE_LIBMUSEPACK_103)
ENDIF(${USE_MPCDEC_103})

ADD_LIBRARY(MUSIKEngine apedecoder.cpp  
		decoder.cpp  
		engine.cpp  
		flacdecoder.cpp  
		mpcdecoder.cpp
		stream.cpp
)