
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../inc)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../..)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../3rd-Party)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../3rd-Party/include)

INCLUDE(CheckIncludeFileCXX)


CHECK_INCLUDE_FILE_CXX("mpcdec/mpcdec.h" USE_MPCDEC_12)
IF(${USE_MPCDEC_12})
    ADD_DEFINITIONS(-DMUSIKENGINE_USE_LIBMPCDEC_12)
ELSE(${USE_MPCDEC_12})
    CHECK_INCLUDE_FILE_CXX("musepack/stdafx.h" USE_MPCDEC_103)
    IF(${USE_MPCDEC_103})
        ADD_DEFINITIONS(-DMUSIKENGINE_USE_LIBMUSEPACK_103)
    ELSE (${USE_MPCDEC_103})
        SET(USE_LIBMUSEPACK_110 "1")
        ADD_DEFINITIONS(-DMUSIKENGINE_USE_LIBMUSEPACK_110)   
    ENDIF(${USE_MPCDEC_103})
ENDIF(${USE_MPCDEC_12})

ADD_LIBRARY(MUSIKEngine apedecoder.cpp  
		decoder.cpp  
		engine.cpp  
		flacdecoder.cpp
		aacdecoder.cpp  
		mpcdecoder.cpp
		stream.cpp
)

OPTION(OPTION_SUPPORT_APE "Support Ape (Monkeys Audio Files) " ON)
OPTION(OPTION_SUPPORT_MPC "Support Musepack (MPC) Audio Files " ON)
OPTION(OPTION_SUPPORT_FLAC "Support FLAC Audio Files " ON)
OPTION(OPTION_SUPPORT_FAAD2 "Support AAC/MP4 Audio Files " ON)



IF(OPTION_SUPPORT_APE)
# monkeys audio library
FIND_LIBRARY(MAC_LIBRARY NAMES mac PATHS /usr/lib /usr/local/lib)
ELSE(OPTION_SUPPORT_APE)
SET(MAC_LIBRARY "")
ADD_DEFINITIONS(-DMUSIKENGINE_NO_APE_SUPPORT)
ENDIF(OPTION_SUPPORT_APE)

IF(OPTION_SUPPORT_FLAC)
# FLAC library
#FIND_LIBRARY(FLAC_LIBRARY NAMES FLAC PATHS /usr/lib /usr/local/lib)
ELSE(OPTION_SUPPORT_FLAC)
#SET(FLAC_LIBRARY "")
ADD_DEFINITIONS(-DMUSIKENGINE_NO_FLAC_SUPPORT)
ENDIF(OPTION_SUPPORT_FLAC)

IF(OPTION_SUPPORT_FAAD2)
# FLAC library
#FIND_LIBRARY(FLAC_LIBRARY NAMES FLAC PATHS /usr/lib /usr/local/lib)
ELSE(OPTION_SUPPORT_FAAD2)
#SET(FLAC_LIBRARY "")
ADD_DEFINITIONS(-DMUSIKENGINE_NO_FAAD2_SUPPORT)
ENDIF(OPTION_SUPPORT_FAAD2)

IF(OPTION_SUPPORT_MPC)
# musepack library
IF(${USE_MPCDEC_12})
FIND_LIBRARY(MUSEPACK_LIBRARY NAMES mpcdec PATHS /usr/lib /usr/local/lib)
ELSE(${USE_MPCDEC_12})
FIND_LIBRARY(MUSEPACK_LIBRARY NAMES musepack PATHS /usr/lib /usr/local/lib)
ENDIF(${USE_MPCDEC_12})
ELSE(OPTION_SUPPORT_MPC)
SET(MUSEPACK_LIBRARY "")
ADD_DEFINITIONS(-DMUSIKENGINE_NO_MPC_SUPPORT)
ENDIF(OPTION_SUPPORT_MPC)
