
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../inc)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../..)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../3rd-Party)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../3rd-Party/include)

INCLUDE(CheckIncludeFileCXX)

ADD_LIBRARY(MUSIKEngine apedecoder.cpp  
		decoder.cpp  
		engine.cpp  
		flacdecoder.cpp
		aacdecoder.cpp  
		mpcdecoder.cpp
		stream.cpp
)

OPTION(OPTION_SUPPORT_APE "Support Ape (Monkeys Audio Files) " ON)
OPTION(OPTION_SUPPORT_MPC "Support Musepack (MPC) Audio Files " ON)
OPTION(OPTION_SUPPORT_FLAC "Support FLAC Audio Files " ON)
OPTION(OPTION_SUPPORT_FAAD2 "Support AAC/MP4 Audio Files " ON)



IF(OPTION_SUPPORT_APE)
# monkeys audio library
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../3rd-Party/MAC)
ELSE(OPTION_SUPPORT_APE)
ADD_DEFINITIONS(-DMUSIKENGINE_NO_APE_SUPPORT)
ENDIF(OPTION_SUPPORT_APE)

IF(OPTION_SUPPORT_FLAC)
# FLAC library
ELSE(OPTION_SUPPORT_FLAC)
ADD_DEFINITIONS(-DMUSIKENGINE_NO_FLAC_SUPPORT)
ENDIF(OPTION_SUPPORT_FLAC)

IF(OPTION_SUPPORT_FAAD2)
# faad2 library
ELSE(OPTION_SUPPORT_FAAD2)
ADD_DEFINITIONS(-DMUSIKENGINE_NO_FAAD2_SUPPORT)
ENDIF(OPTION_SUPPORT_FAAD2)

IF(OPTION_SUPPORT_MPC)
# musepack library
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../3rd-Party/libmpcdec/include)
ELSE(OPTION_SUPPORT_MPC)
   ADD_DEFINITIONS(-DMUSIKENGINE_NO_MPC_SUPPORT)
ENDIF(OPTION_SUPPORT_MPC)
